RESOLVED FIXED299232
[JSC] Self recursion call in OMG will not need to store callee before calling
https://bugs.webkit.org/show_bug.cgi?id=299232
Summary [JSC] Self recursion call in OMG will not need to store callee before calling
Yusuke Suzuki
Reported 2025-09-19 22:26:13 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-19 22:27:42 PDT
Yusuke Suzuki
Comment 2 2025-09-19 22:29:01 PDT
EWS
Comment 3 2025-09-21 10:59:54 PDT
Committed 300299@main (acce96424b05): <https://commits.webkit.org/300299@main> Reviewed commits have been landed. Closing PR #51059 and removing active labels.
Alexey Proskuryakov
Comment 4 2025-09-21 12:22:21 PDT
*** Bug 299231 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 5 2025-09-21 12:22:24 PDT
*** Bug 299230 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.